# c-audio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c
applications/envelope-detection/: main.c
applications/envelope_detection/: main.c
applications/procedural-envelope/: README.md  main.c
applications/vocoder/: main.c
include/: filter.h  filter_descriptor.h  generateSignal.h  generateSignals.h  generateSine.h  generateSquare.h  readWav.h  sig_descriptor.h  wav_header.h  writeCSV.h  writeWav.h
scripts/: build-run.py  build.py  coeffs.py  config.py  fft.py  freq-response.py  impulse-response.py  plot.py  stablity.py
src/: filter.c  generateSignal.c  generateSignals.c  generateSine.c  generateSquare.c  main.c  readWav.c  writeCSV.c  writeWav.c
